feat: As a FE, I want to have endpoint to delete a Route
